--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
 <script>
   // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyAuH9FXI31FS185XcBm5kpPcZyfezUW3C8",
-    authDomain: "cargame-81028.firebaseapp.com",
-    databaseURL: "https://cargame-81028-default-rtdb.firebaseio.com",
-    projectId: "cargame-81028",
-    storageBucket: "cargame-81028.appspot.com",
-    messagingSenderId: "999267376733",
-    appId: "1:999267376733:web:99c01b63caf22333bf37b4"
-  };
+  const firebaseConfig = {
+  apiKey: "AIzaSyAEEosyR6jbPDlanT3B2803b7hh_ptYNcs",
+  authDomain: "c-36-ee962.firebaseapp.com",
+  databaseURL: "https://c-36-ee962-default-rtdb.firebaseio.com",
+  projectId: "c-36-ee962",
+  storageBucket: "c-36-ee962.appspot.com",
+  messagingSenderId: "667362318683",
+  appId: "1:667362318683:web:5a5ff7002ae3f6a8c4a27e"
+};
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
